Add a setting up section to the website

--- a/00_setting_up.qmd
+++ b/00_setting_up.qmd
@@ -2,20 +2,257 @@
 title: "0. Setting Up"
 ---
 
+This section will equip your computer with all necessary tools for this course. The motivation behind each tool will be explained in the later sessions. For now, just follow the instructions and prepare to awe (and, at times, get frustrated) with power of computing.
+
+Although the course advertises itself as programming language agnostic, Python will be used to provide 'meat' for coding examples. See a Justin Bois's note on "superiority" of one programming language over another below.
+
+::: {.callout-note title="Why Python?" collapse="true"}
+There are plenty of programming languages that are widely used in data science and in scientific computing more generally. Some of these, in addition to Python, are Matlab/Octave, Mathematica, R, Julia, Java, JavaScript, Rust, and C++.
+
+I have chosen to use Python. I believe language wars are counterproductive and welcome anyone to port the code we use to any language of their choice, I nonetheless feel we should explain this choice.
+
+Python is a flexible programming language that is widely used in many applications. This is in contrast to more domain-specific languages like R and Julia. It is easily extendable, which is in many ways responsible for its breadth of use. We find that there is a decent Python-based tool for many applications we can dream up, certainly in data science. However, the Python-based tool is often not the very best for the particular task at hand, but it is almost always pretty good. Thus, knowing Python is like having a Swiss Army knife; you can wield it to effectively accomplish myriad tasks. Finally, we also find that it has a shallow learning curve with most students.
+
+by Justin Bois, [bootcamp 2025](https://justinbois.github.io/bootcamp/2025_wis/lessons/l00_configuring_your_computer.html#Why-Python?)
+:::
+
+# UNIX
+
+```{mermaid}
+flowchart LR
+
+OS --> Family --> Distribution --> Derivative
+UNIX --> Linux --> Debian --> Ubuntu
+
+```
+
+The motivation behind the use of terminal will be explained in [the next session](01_command_line_interface.qmd)
+
+First, we need an efficient way interact with your computer. UNIX is by far the most well supported and used operating system (OS) to do so. It allows Apple Mac users can sigh in relief since their computers are based on UNIX and can skip to the next section. Windows, however, is another story.
+
+-   MulQuaBio
+
+## WSL (Windows users only)
+
+Being a popular operating system doesn't make Windows easy to use for software development. Windows Subsystem for Linux (WSL) circumvents this problem by creating a separate environment on your computer to run Linux, a free UNIX-like OS.
+
+### Installation
+
+::: {.callout-note appearance="simple" collapse="true"}
+If you experiencing some troubles if installation it is worth:
+
+1.  Updating your Windows version. Open Windows Settings, go to ‘Updates and Security’ and hit ‘Check for Updates’.
+2.  Enable WSL on your Windows manually.
+    -   Click on the **Start Menu** and search for **“Turn Windows features on or off”**.
+
+    -   Open the result. A new window will appear with a list of Windows features.
+
+    -   Scroll down and check the following two boxes:
+
+        -   'Windows Subsystem for Linux' ✅
+
+        -   'Virtual Machine Platform' ✅
+
+    -   Click **OK**. Windows will apply the changes and may ask you to restart your computer.
+
+    -   After restarting, WSL will be enabled on your system.
+:::
+
+#### Option 1: Microsoft Store
+
+<https://www.virtualizationhowto.com/2022/11/windows-subsystem-for-linux-microsoft-store-ga-and-now-default-wsl/>
+
+1. Search for "WSL" in the search bar of the Microsoft Store and click **Install**.
+
+![](images/paste-5.png)
+
+::: {.callout-important appearance="simple"}
+If WSL is not available from the Microsoft Store, proceed to Option 2 below. If it is available, you might need to restart your computer after installing WSL.
+:::
+
+2. After installing WSL from the Microsoft Store, click the **Open** option to open the app. It will finish the installation of Ubuntu and prompt you to set up your Linux user.
+
+![](images/paste-6.png)
+
+Alternatively, you can search ["Ubuntu" in the Microsoft Store](https://apps.microsoft.com/detail/9pdxgncfsczv?hl) and install it directly from there.
+
+**Video guide:** <https://www.youtube.com/watch?v=OqCPkcRoMF0>
+
+### From the PowerShell
+
+1.  Open the **Start Menu**, and search for **"PowerShell"**.
+
+2.  **Right-click** and choose **"Run as administrator"**.
+
+3.  Enter the following command to install WSL and hit **Enter**:
+
+    ``` bash
+    wsl --install
+    ```
+
+![](images/paste-2.png)
+
+::: {.callout-important appearance="simple"}
+## You might need to restart your computer after installing WSL.
+:::
+
+By default, Ubuntu will be installed as the main Linux distribution. WSL will appear in your Start Menu and the Search Bar options.
+
+### Creating a Default UNIX User Account
+
+::: {.callout-important appearance="simple"}
+Before you set a username on your computer, sign up for a GitHub account (see @sec-github) and check if that username is available.
+
+![](images/paste-22.png)
+:::
+
+::: {.callout-tip title="Username and password suggestions" collapse="true"}
+For a username: 
+- Use only lower-case letters and numbers. 
+- Start with a letter. 
+- Be short and descriptive.
+
+If your name is John Derek Smith you can try: `jsmith`, `jdsmith`, or `johnsmith`. Any other imaginary name is permissible as long as it meets the criteria above. D&D, MTG, LoL, and WoW nicknames, if that's is publically appropriate.
+
+For a password, you can set the same one you have for your OIST account to make it easier to remember. It will be used for login and authentication but, more importantly, commands like `sudo` that grant administrative priviledges. If not sure what makes a strong password [consult XKCD](https://xkcd.com/936/).
+:::
+
+1. Launch Ubuntu terminal
+
+![](images/paste-11.png)
+
+2. You will be prompted to enter a username.
+
+![](images/paste-12.png)
+
+Enter your chosen username and hit **Enter**. If you make a mistake in typing your username, you can close the window and open it again. In this example, `tunkert` is the username.
+
+![](images/paste-13.png)
+
+3. Choose a password. You will not see it as you type due to default UNIX security reasons. If not sure what you entered is correct, hold **Backspace** for a couple of seconds or hit `Ctrl+U`. That will erase everything you have written. After making sure you have entered the correct password, hit **Enter**. If unsure, write the password down.
+
+![](images/paste-14.png)
+
+4. Re-type the chosen password and hit **Enter**.
+
+![](images/paste-15.png)
+
+5. Once both username and password are entered, you will see a welcome message from Ubuntu.
+
+![](images/paste-16.png)
+
+::: {.callout-note appearance="simple"}
+The typing line takes the new form of `tunkert@LAPTOP-JU9CGB60:~$`. Can you guess what the name after `@` means? We will talk about what each symbol means in the terminal section.
+:::
+
+6. To ensure that Ubuntu is up-to-date, type the following and press **Enter**:
+
+``` bash
+sudo apt update && sudo apt upgrade -y
+```
+
+::: {.callout-note appearance="simple"}
+We will understand the logic behind this command later in the next section as well.
+:::
+
+![](images/paste-17.png)
+
+7. You will be prompted to enter the password (Do you remember?). Enter the password—you will not see it—and press **Enter**.
+
+![](images/paste-18.png)
+
+8. The update will begin. In the end, you will have an empty typing line with the latest Ubuntu.
+
+![](images/paste-21.png)
+
+You are now set and ready to install all the wonderful programming tools that have been developed over the past 50 or so years by the developer's community. As you might guess, there are hundreds of thousands of programs out there, and ideally, we would like to keep track of what we install. That will be our next installation.
+
+# Package Manager
+
+An out-of-box UNIX-based OS has limited amount of tools. For this course we will use various open-source tools which need to be downloaded, installed, updated and keeping track of. Package manager is a tool to manage tools. We will use Pixi package manager in this course and will dive deep into it in [the Virtual Environments session.](02_virtual_environments.qmd)
+
+## Pixi
+
+[Pixi](https://pixi.prefix.dev/latest/) is the latest package manager and unlike its competition (e.g. Conda, Mamba, uv) supports many programming languages besides Python and is gaining momentum among software developers and scientist.
+
+To install Pixi run the following command in your terminal:
+
+``` bash
+curl -fsSL https://pixi.sh/install.sh | sh
+```
+
+To verify that Pixi got installed sucessufly type:
+
+``` bash
+which pixi
+```
+
+You will see something like `/Users/username/.pixi/bin/pixi` printed, where `username` is your chosen username.
+
+<https://pixi.prefix.dev/latest/installation/>
+
+### Course Virtual Environment
+
+Can we do it during the Virtual Environments session?
+
+# Developer Platform
+
+Your code needs to live somewhere besides your computer. Otherwise, if you loose your computer will you be able to access your projects? For this purpouse, we will use GitHub which will take a central role alongside Git during [the session on version control](04_version_control.qmd).
+
+## GitHub {#sec-github}
+
+GitHub is a widely used platform to store, manage, share, and collaborate with others on software projects. Account is free and you can upgrade to Pro for free as a student (see the tip below). Sign up [here](https://github.com/signup).
+
+::: {.callout-tip title="GitHub Education" collapse="true"}
+As a student you can get a **free** GitHub Pro account as part of [GitHub Education](https://github.com/education/) along side other perks. Once you have an basic account, follow this [link](https://github.com/settings/education/benefits).
+
+You can use a photo of your student ID card (both-sides) or other eligible documents listed on [here](https://docs.github.com/en/education/about-github-education/github-education-for-students/apply-to-github-education-as-a-student).
+:::
+
 # IDE or not to IDE?
 
-An *integrated development environment* (IDE)
+An *integrated development environment* (IDE) is a software application that provides a few tools to make coding easier. The most important of these is a way to write the code itself! IDEs are not the only way to program, but they are perhaps the most useful. Note that the language and the place you write the language (the IDE) are separate things: the language is a way of processing your instructions, the IDE is where you write those instructions. There are a lot of IDEs out there. This course will use Microsoft’s *Visual Studio Code*, which works on all major operating systems and is one of the most popular.
 
+Adapted from Arthur Turell, [P4DS](https://aeturrell.github.io/python4DS/prerequisites.html#integrated-development-environment-or-ide).
 
-# Visual Studio Code
+## Visual Studio Code
 
-Everyone will use VS Code.
+[Visual Studio Code](https://code.visualstudio.com/), aka VS Code, has the following useful features:
 
-## Windows Subsystem Linux
+-   a way to run your code interactively (line-by-line) or all at once
 
-Installatino manual for WSL
+-   a way to debug (look for errors) in your code
 
-## Profiles
+-   a quick way to access helpful information about commonly used software packages
+
+-   automatic code formatting, so that your code follows best practice guidelines
+
+-   auto-completion of your code when you hit TAB
+
+-   automatic code checking for basic errors
+
+-   coloring your brackets in pairs so you can keep track of the logical order of execution of your code!
+
+![](images/paste-25.png)
+
+### Installation
+
+Install VS Code from [the official website](https://code.visualstudio.com/) (it will determine which version of the installer to use) or download installer manually [here](https://code.visualstudio.com/Download).
+
+![](images/paste-23.png)
+
+Now that you have a GitHub account, you can use to sign up into the VS Code (both are owned by Microsoft). Not only that will allow you to work smoothly with GitHub but all your VS Code settings will be backed up to a profile which can be accessed easily from other computers if you ever have this need. Speaking of VS Code profiles: we will use one tailored for this course.
+
+### Extensions
+
+The biggest power of VS Code lies in its [extensions](https://code.visualstudio.com/docs/configure/extensions/extension-marketplace). They are ubiquitous allowing you to boost your IDE simply by installing what others have solved for you. You can browse them by clicking on the four cube icon on the side bar or by pressing `Cmd/Ctrl+Shift+X`.
+
+![](images/paste-26.png)
+
+There are certain basic extensions that almost every VS Code user will have installed but it can be cumbersome to manually select all those one by one. That's how VS Code Profiles have been created.
+
+### Profiles
+
 > Profiles can be used to customize VS Code for students to ease the use in a classroom setting. Profiles allow educators to quickly share a customized VS Code setup with students.
 >
 > [VS Code manual](https://code.visualstudio.com/docs/configure/profiles#_education)
@@ -24,18 +261,38 @@ Stored in `settings.json` file
 
 https://code.visualstudio.com/docs/configure/profiles
 
-https://code.visualstudio.com/docs/configure/profiles#_share-profiles
+https://code.visualstudio.com/docs/configure/profiles#\_share-profiles
 
-https://code.visualstudio.com/docs/configure/profiles#_import
+https://code.visualstudio.com/docs/configure/profiles#\_import
 
-## Workspaces
-Any use? A workspace for GECS.
+### Workspaces
 
-# Pixi
-1. Intstall Pixi using the default suggestion with Curl.
-2. Create a virtual environment for this course.
-    
-    `pixi init gecs`
+Any use? A workspace for GECS?
 
-# Why Python?
-Although the course advertises itself as programming language agnostic, Python will be used to provide 'meat' for coding and project examples.
+# Shell Promt (optional)
+
+## Starship
+
+Starship is by far the most widely used shell promt
+
+```{mermaid}
+flowchart LR
+
+CLI --> Shell --> Terminal
+Ubuntu --> Bash --> GNOME_Terminal
+```
+
+::: {.callout-tip title="Computing vs Programming vs Coding"}
+Coding is writing instructions in a language (syntax), programming is the broader process of designing, building, and testing software (logic & problem-solving), and computing is the overarching field studying computers, algorithms, and computation, with programming and coding as key activities within it.
+
+```{mermaid}
+flowchart LR
+
+Computing --> Programming --> Coding
+```
+:::
+
+# References
+
+-   [How to Install Ubuntu on Windows (Step-by-Step Guide for Beginners)](https://dev.to/devsubha/how-to-install-ubuntu-on-windows-step-by-step-guide-for-beginners-2hjn) by Subha Mondal
+-   [Install WSL on Windows 11 in 3 Minutes \| Step-by-Step Guide]() by Abstract programmer
