Reset terminal after installing Pixi

--- a/00_setting_up.qmd
+++ b/00_setting_up.qmd
@@ -256,7 +256,19 @@ To install Pixi run the following command in your terminal:
 curl -fsSL https://pixi.sh/install.sh | sh
 ```
 
-To verify that Pixi got installed successfully type:
+To verify that Pixi got installed successfully restart the terminal. There are two ways to do so. Easy way is to kill it and open a new terminal window. Another way is to type the following for Ubuntu users:
+
+```bash
+source ~/.bashrc
+```
+
+macOS user need to type:
+
+```zsh
+source ~/.zshrc
+```
+
+OK, now that the terminal is reset, type:
 
 ``` bash
 which pixi
