Fix typo in drop-in session description

--- a/index.qmd
+++ b/index.qmd
@@ -81,7 +81,7 @@ This course is for researchers who want to learn how to automate repetitive task
 
 ## Drop-in
 
-After every session there will be a drop-in the following week. You can come with questions or problems reagrding the course.
+After every session there will be a drop-in the following week. You can come with questions or problems regarding the course.
 
 **Time:** 12:00-13:00 (Wednesdays)\
 **Location:** C102 (The Cafe Private Room)\
